Remove scrolling once and for allgit add . No touchmove on mobile + no scroll on desktop. If mobile + scroll (somehow) it will scroll! - BUG

--- a/readyStyles.css
+++ b/readyStyles.css
@@ -98,6 +98,40 @@
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .absolute{
   position: absolute;
 }
@@ -124,6 +158,14 @@
 
 .bottom-0{
   bottom: 0px;
+}
+
+.bottom-3{
+  bottom: 0.75rem;
+}
+
+.bottom-3\.5{
+  bottom: 0.875rem;
 }
 
 .left-1{
@@ -234,12 +276,12 @@
   margin-left: 0.875rem;
 }
 
-.mt-1{
-  margin-top: 0.25rem;
-}
-
 .ml-7{
   margin-left: 1.75rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
 }
 
 .flex{
@@ -262,8 +304,8 @@
   height: 1.25rem;
 }
 
-.h-\[125px\]{
-  height: 125px;
+.h-\[12vh\]{
+  height: 12vh;
 }
 
 .h-\[40vh\]{
@@ -274,12 +316,24 @@
   height: 45vh;
 }
 
-.h-\[6vh\]{
-  height: 6vh;
+.h-\[7vh\]{
+  height: 7vh;
 }
 
 .h-\[8vh\]{
   height: 8vh;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.max-h-\[60px\]{
+  max-height: 60px;
+}
+
+.max-h-\[80px\]{
+  max-height: 80px;
 }
 
 .w-5{
@@ -314,12 +368,29 @@
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-rows-1{
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+}
+
 .grid-rows-3{
   grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
+.items-center{
+  align-items: center;
+}
+
+.justify-items-center{
+  justify-items: center;
+}
+
 .gap-0{
   gap: 0px;
+}
+
+.gap-x-5{
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }
 
 .justify-self-start{
@@ -338,6 +409,10 @@
   border-radius: 9999px;
 }
 
+.rounded-tl-3xl{
+  border-top-left-radius: 1.5rem;
+}
+
 .pt-24{
   padding-top: 6rem;
 }
@@ -345,6 +420,7 @@
 html, body{
   background-color: #FFE7FA ;
   overflow-x: hidden;
+  overflow-y: hidden;
   margin: 0px;
 }
 
