--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 html, body{
   background-color: #FFE7FA ;
   overflow-x: hidden;
+  overflow-y: hidden;
   margin: 0px;
 }
 .custom-width {
